# Ericsson_2019

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.java  CMakeLists.txt  Direction.h  IStrategy.cpp  IStrategy.h  Players.cpp  Players.h  ProbabilityScoreSrategy.cpp  ProbabilityScoreSrategy.h  ProbabilityScoreStrategy.cpp  ProbabilityScoreStrategy.h  Reader.cpp  Reader.h  Scores.cpp  Scores.h  TestingStrategy.cpp  TestingStrategy.h  Wololo.sln  Wololo.vcxproj  Wololo2.sln  Wololo2.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basics.h  cmake_install.cmake  commands.h  constants.h  directions.h  graph.cpp  graph.h  main.cpp  nightly_stats.txt  run.sh  run_a_lot.py  simulation.cpp  simulation.h  stats.py  strategy.cpp  (+8 more)
console.runner/: ConsoleRunner.csproj  Program.cs
console.runner/Properties/: AssemblyInfo.cs
console.runner/src/ConsoleRunner/: ConsoleRunner.csproj
scripts/: display.py  my_globals.py  replay.py  router_game.py  run.bat
